--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 asgiref==3.7.2
-Django==4.2.7
+Django==3.2.23
 django-cors-headers==4.3.0
 djangorestframework==3.14.0
 djangorestframework-jwt==1.11.0
@@ -9,3 +9,4 @@ PyJWT==1.7.1
 pytz==2023.3.post1
 sqlparse==0.4.4
 tzdata==2023.3
+gunicorn==20.1.0
